k8s/ingress-deployment-stage-4/bank.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-deployment
  labels:
    app: bank-metadata

spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-label
  template:
    metadata:
      labels:
        app: bank-label
    spec:
      containers:
        - name: bank
          image: bank:1.0
          ports:
            - containerPort: 8080 # просто "справочная" информация для того чтобы понимать на какой порт обращаться
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: bank-service

spec:
  type: ClusterIP
  selector:
    app: bank-label
  ports:
    - port: 8080 #порт, который идет наружу. Может даже не совпадать с targetPort
      targetPort: 8080 # реальный порт имеджа, обязан совпадать с server.port
