k8s/ingress-deployment-stage-4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-config
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /bank
            pathType: Prefix
            backend:
              service:
                name: bank-service
                port:
                  number: 8080
          - path: /shop
            pathType: Prefix
            backend:
              service:
                name: shop-service
                port:
                  number: 8080


#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.2/deploy/static/provider/cloud/deploy.yaml

#kubectl delete -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.2/deploy/static/provider/cloud/deploy.yaml
